@@ -5,6 +5,7 @@ Changes in openair 0.5-6 [2011-08-30]
 	and plotting pre-defined HYSPLIT back trajectories. These
 	functions are under active development and are for testing
 	purposes only!
+*	Fix error in % upper/lower uncertainty intervals for MannKendall
 Changes in openair 0.5-4 [2011-08-04]
 =====================================
 *	Use roxygen2 for package documentation and future
